--- a/_posts/2017-12-10-spark-one.md
+++ b/_posts/2017-12-10-spark-one.md
@@ -27,13 +27,13 @@ Spark is a unified analystics engine for large-scale data processing. It achieve
 
 #### **基本流程**
 
-(1) 当一个Spark应用被提交时，首先需要为这个应用构建起基本的运行环境，即由任务控制节点创建一个SparkContext，由SparkContext负责和资源管理器(Cluster Manager)的通信以及进行资源的申请，任务的分配和监控．SparkContext会向资源管理器注册并运行Executor资源；
+1. 当一个Spark应用被提交时，首先需要为这个应用构建起基本的运行环境，即由任务控制节点创建一个SparkContext，由SparkContext负责和资源管理器(Cluster Manager)的通信以及进行资源的申请，任务的分配和监控．SparkContext会向资源管理器注册并运行Executor资源；
 
-(2) 资源管理器会为Executor分配资源，并启动Executor进行，Executor运行情况会随着"心跳"发送到资源管理器;
+2. 资源管理器会为Executor分配资源，并启动Executor进行，Executor运行情况会随着"心跳"发送到资源管理器;
 
-(3) SparkContext会根据RDD的依赖关系构建DAG图，DAG图提交给DAG调度器进行解析，将DAG图分解成多个阶段，并且计算出每个阶段之间的依赖关系，然后把一个个"任务集"提交给底层的任务调度器进行处理，Executor向SparkContext申请任务，任务调度器将任务发送给Executor运行，同时，SparkContext将应用程序代码发放给Executor;
+3. SparkContext会根据RDD的依赖关系构建DAG图，DAG图提交给DAG调度器进行解析，将DAG图分解成多个阶段，并且计算出每个阶段之间的依赖关系，然后把一个个"任务集"提交给底层的任务调度器进行处理，Executor向SparkContext申请任务，任务调度器将任务发送给Executor运行，同时，SparkContext将应用程序代码发放给Executor;
 
-(4) 任务放在Executor运行，把执行结果反馈给任务调度器，然后反馈给DAG调度器，运行完毕后写入数据并释放所有资源．
+4. 任务放在Executor运行，把执行结果反馈给任务调度器，然后反馈给DAG调度器，运行完毕后写入数据并释放所有资源．
 
 #### **RDD概念**
 
