--- a/_posts/2018-09-22-netcdf.md
+++ b/_posts/2018-09-22-netcdf.md
@@ -14,6 +14,7 @@ NetCDF is a set of software libraries and self-describing, machine-independent d
 
 
 #### **Install netCDF**
+
 NetCDF 下载地址: [netCDF](https://www.unidata.ucar.edu/downloads/netcdf/index.jsp). ubuntu 有一个安装下载包，但是没有尝试，以下从源代码编译安装；如果要使用HDF5的话，需要先安装hdf5，可以参考链接[csdnlab](https://blog.csdn.net/toby54king/article/details/78980365)．安装c++版本的程序，需要在c版本上面进行安装，过程和安装c版本一致．C版本和c++版本的区别主要在于包含的头文件 #include <netcdfcpp.h>, 里面相关的接口C++版本做了进一步封装；
 ```
 ~/netcdf-4.6.1$ ./configure --prefix=/usr/local/netcdf --disable-dap --disable-netcdf-4
@@ -21,7 +22,8 @@ Make check install
 Make
 Sudo Make install
 ```
-**Use netCDF**
+#### **Use netCDF**
+
 netCDF文件内容, 变量(variable)对应着真实物理数据,维度(dimension)，属性(Attribute)对应着变量值和维的具体物理含义．
 ```
 #include <iostream>
