--- a/_posts/2018-10-28-redis.md
+++ b/_posts/2018-10-28-redis.md
@@ -15,7 +15,7 @@ Redis is in-memory data structure store, used as a database, cache and message b
 
 Redis支持数据的持久化，可以将内存中的数据保存在磁盘中，重启的时候可以再次加载进行使用;Redis不仅仅支持简单的key-value类型的数据，同时还提供string, list，set，zset，hash等数据结构的存储;Redis支持数据的备份，即master-slave模式的数据备份;Redis的所有操作都是原子性的，意思就是要么成功执行要么失败完全不执行.
 
-####　**应用场景**
+##### **应用场景**
 
 (1) 缓存数据，针对经常需要查询且变动不是很频繁的数据(热点数据);
 
@@ -25,7 +25,7 @@ Redis支持数据的持久化，可以将内存中的数据保存在磁盘中，
 
 Redis为什么这么快？纯内存操作(可以手动持久化到硬盘)，单线程(避免多线程中上下文频繁切换的操作)，数据结构和操作比较简单，redis在底层模型中建立了自己的VM机制，因为一般的系统调用系统函数的话，会浪费一定的时间去移动和请求，使用多路I/O复用模型，非阻塞模型．
 
-####　**安装启动**
+#####　**安装启动**
 ```
 sudo apt-get update
 sudo apt-get install redis-server
@@ -58,7 +58,8 @@ zadd key score member
 数据集 {1, 3, 5, 7, 5, 7, 8}， 那么这个数据集的基数集为 {1, 3, 5 ,7, 8}, 基数(不重复元素)为5． 基数估计就是在误差可接受的范围内，快速计算基数．Redis HyperLogLog 是用来做基数统计的算法，在输入元素的数量或者体积非常非常大时，计算基数所需的空间总是固定 的、并且是很小的。
 
 
-####　**高级内容**
+#####　**高级内容**
+
 Redis 发布订阅(pub/sub)是一种消息通信模式：发送者(pub)发送消息，订阅者(sub)接收消息:
 ```
 SUBSCRIBE redisChat
@@ -82,6 +83,7 @@ CONFIG GET dir #获取文件目录
 
 
 ##### **缓存击穿**
+
 缓存是为了缓解数据库压力而添加的一层保护层，当从缓存中查询不到我们需要的数据就要去数据库查询，如果被黑客利用，频繁访问缓存中不存在的数据，缓存就失去了意义，导致数据库连接异常;
 
 解决方案:
@@ -95,7 +97,7 @@ CONFIG GET dir #获取文件目录
 由于是内存数据库，所以单台机器存储的数据量有限，需要及时删除不需要的数据，当修改redis的数据之后需要将持久化到硬盘的数据的重新加入到内存中，时间比较久，这时候redis是无法正常运行的．
 
 
-####　**python redis**
+#####　**python redis**
 ```
 import redis
 r = redis.Redis(host='192.168.0.110', port=6379,db=0)
