--- a/_posts/2017-09-16-android.md
+++ b/_posts/2017-09-16-android.md
@@ -13,7 +13,7 @@ Just little notes about Android Development, actually I know little about it.
 
 
 
-#### **基本概念**
+#### **Basic Java**
 
 JNI: Java Native Interface, 属于Java的特性，使得Java与本地其他语言交互；如在Java中调用C++，或者在C++中调用Java.
 
@@ -21,7 +21,7 @@ NDK: Native Development Kit, 是Android的一个工具开发包，快速开发C+
 
 Android.mk制定源码编译的配置信息，Application.mk配置编译平台的相关内容;
 
-#### **手机传感器**
+#### **Sensors**
 
 Location: longitude, latitude and altitude
 
